--- a/data_and_models/pipelines/ner/config.cfg
+++ b/data_and_models/pipelines/ner/config.cfg
@@ -1,15 +1,16 @@
 [paths]
 train = null
 dev = null
+base_model = null
 
 [system]
-gpu_allocator = "pytorch"
+gpu_allocator = null
 seed = 0
 
 [nlp]
 lang = "en"
-pipeline = ["transformer", "ner"]
-batch_size = 128
+pipeline = ["tok2vec", "tagger", "attribute_ruler", "lemmatizer", "parser", "ner"]
+batch_size = 1000
 disabled = []
 before_creation = null
 after_creation = null
@@ -20,48 +21,33 @@ after_pipeline_creation = null
 
 [components]
 
+[components.tok2vec]
+source = ${paths.base_model}
+
+[components.tagger]
+source = ${paths.base_model}
+
+[components.attribute_ruler]
+source = ${paths.base_model}
+
+[components.lemmatizer]
+source = ${paths.base_model}
+
+[components.parser]
+source = ${paths.base_model}
+
 [components.ner]
-factory = "ner"
-moves = null
-update_with_oracle_cut_size = 100
-
-[components.ner.model]
-@architectures = "spacy.TransitionBasedParser.v2"
-state_type = "ner"
-extra_state_tokens = false
-hidden_width = 64
-maxout_pieces = 2
-use_upper = false
-nO = null
-
-[components.ner.model.tok2vec]
-@architectures = "spacy-transformers.TransformerListener.v1"
-grad_factor = 1.0
-upstream = "*"
-
-[components.ner.model.tok2vec.pooling]
-@layers = "reduce_mean.v1"
-
-[components.transformer]
-factory = "transformer"
-max_batch_items = 4096
-
-[components.transformer.set_extra_annotations]
-@annotation_setters = "spacy-transformers.null_annotation_setter.v1"
-
-[components.transformer.model]
-@architectures = "spacy-transformers.TransformerModel.v1"
-name = "roberta-base"
-
-[components.transformer.model.get_spans]
-@span_getters = "spacy-transformers.strided_spans.v1"
-window = 128
-stride = 96
-
-[components.transformer.model.tokenizer_config]
-use_fast = true
+source = ${paths.base_model}
 
 [corpora]
+
+[corpora.train]
+@readers = "spacy.Corpus.v1"
+path = ${paths.train}
+max_length = 2000
+gold_preproc = false
+limit = 0
+augmenter = null
 
 [corpora.dev]
 @readers = "spacy.Corpus.v1"
@@ -71,35 +57,32 @@ gold_preproc = false
 limit = 0
 augmenter = null
 
-[corpora.train]
-@readers = "spacy.Corpus.v1"
-path = ${paths.train}
-max_length = 500
-gold_preproc = false
-limit = 0
-augmenter = null
-
 [training]
-accumulate_gradient = 3
-dev_corpus = "corpora.dev"
 train_corpus = "corpora.train"
+dev_corpus = "corpora.dev"
 seed = ${system.seed}
 gpu_allocator = ${system.gpu_allocator}
 dropout = 0.1
+accumulate_gradient = 1
 patience = 1600
 max_epochs = 0
-# TODO To be tuned. Original value: 20000.
-max_steps = 1000
+max_steps = 20000
 eval_frequency = 200
-frozen_components = []
+frozen_components =  ["tok2vec", "tagger", "attribute_ruler", "lemmatizer", "parser"]
 before_to_disk = null
 
 [training.batcher]
-@batchers = "spacy.batch_by_padded.v1"
-discard_oversize = true
-size = 2000
-buffer = 256
+@batchers = "spacy.batch_by_words.v1"
+discard_oversize = false
+tolerance = 0.2
 get_length = null
+
+[training.batcher.size]
+@schedules = "compounding.v1"
+start = 100
+stop = 1000
+compound = 1.001
+t = 0.0
 
 [training.logger]
 @loggers = "spacy.ConsoleLogger.v1"
@@ -114,13 +97,7 @@ L2 = 0.01
 grad_clip = 1.0
 use_averages = false
 eps = 0.00000001
-
-[training.optimizer.learn_rate]
-@schedules = "warmup_linear.v1"
-# TODO To be tuned since the change of training.max_steps (original: 20000).
-warmup_steps = 250
-total_steps = ${training.max_steps}
-initial_rate = 0.00005
+learn_rate = 0.001
 
 [training.score_weights]
 ents_per_type = null
@@ -131,9 +108,9 @@ ents_r = 0.0
 [pretraining]
 
 [initialize]
-vectors = null
+vectors = ${paths.base_model}
 init_tok2vec = null
-vocab_data = null
+vocab_data = ${paths.base_model}
 lookups = null
 before_init = null
 after_init = null
