Use base models

--- a/data_and_models/pipelines/ner/config.cfg
+++ b/data_and_models/pipelines/ner/config.cfg
@@ -100,6 +100,14 @@ eps = 0.00000001
 learn_rate = 0.001
 
 [training.score_weights]
+tag_acc = null
+lemma_acc = null
+dep_uas = null
+dep_las = null
+dep_las_per_type = null
+sents_f = null
+sents_p = null
+sents_r = null
 ents_per_type = null
 ents_f = 1.0
 ents_p = 0.0
@@ -110,7 +118,7 @@ ents_r = 0.0
 [initialize]
 vectors = ${paths.base_model}
 init_tok2vec = null
-vocab_data = ${paths.base_model}
+vocab_data = null
 lookups = null
 before_init = null
 after_init = null
