--- a/data_and_models/pipelines/ner/dvc.yaml
+++ b/data_and_models/pipelines/ner/dvc.yaml
@@ -55,8 +55,8 @@ stages:
     outs:
     - ../../models/ner/model5
   add_er_1:
-    cmd: python add_er.py --model ../../models/ner/model1 --etypes DISEASE --patterns_file ../../annotations/ner/rule_based_patterns.jsonl
-      --output_file ../../models/ner_er/model1
+    cmd: python add_er.py --model ../../models/ner/model1 --etypes DISEASE --patterns_file
+      ../../annotations/ner/rule_based_patterns.jsonl --output_file ../../models/ner_er/model1
     deps:
     - Dockerfile
     - ../../models/ner/model1
@@ -67,8 +67,9 @@ stages:
     outs:
     - ../../models/ner_er/model1
   add_er_2:
-    cmd: python add_er.py --model ../../models/ner/model2 --etypes CELL_COMPARTMENT,DRUG,ORGAN --patterns_file ../../annotations/ner/rule_based_patterns.jsonl
-      --output_file ../../models/ner_er/model2
+    cmd: python add_er.py --model ../../models/ner/model2 --etypes CELL_COMPARTMENT,DRUG,ORGAN
+      --patterns_file ../../annotations/ner/rule_based_patterns.jsonl --output_file
+      ../../models/ner_er/model2
     deps:
     - Dockerfile
     - ../../models/ner/model2
@@ -81,8 +82,9 @@ stages:
     outs:
     - ../../models/ner_er/model2
   add_er_3:
-    cmd: python add_er.py --model ../../models/ner/model3 --etypes CHEMICAL,ORGANISM --patterns_file ../../annotations/ner/rule_based_patterns.jsonl
-      --output_file ../../models/ner_er/model3
+    cmd: python add_er.py --model ../../models/ner/model3 --etypes CHEMICAL,ORGANISM
+      --patterns_file ../../annotations/ner/rule_based_patterns.jsonl --output_file
+      ../../models/ner_er/model3
     deps:
     - Dockerfile
     - ../../models/ner/model3
@@ -94,8 +96,9 @@ stages:
     outs:
     - ../../models/ner_er/model3
   add_er_4:
-    cmd: python add_er.py --model ../../models/ner/model4 --etypes CELL_TYPE,PROTEIN --patterns_file ../../annotations/ner/rule_based_patterns.jsonl
-      --output_file ../../models/ner_er/model4
+    cmd: python add_er.py --model ../../models/ner/model4 --etypes CELL_TYPE,PROTEIN
+      --patterns_file ../../annotations/ner/rule_based_patterns.jsonl --output_file
+      ../../models/ner_er/model4
     deps:
     - Dockerfile
     - ../../models/ner/model4
@@ -107,8 +110,8 @@ stages:
     outs:
     - ../../models/ner_er/model4
   add_er_5:
-    cmd: python add_er.py --model ../../models/ner/model5 --etypes PATHWAY --patterns_file ../../annotations/ner/rule_based_patterns.jsonl
-      --output_file ../../models/ner_er/model5
+    cmd: python add_er.py --model ../../models/ner/model5 --etypes PATHWAY --patterns_file
+      ../../annotations/ner/rule_based_patterns.jsonl --output_file ../../models/ner_er/model5
     deps:
     - Dockerfile
     - ../../models/ner/model5
@@ -123,127 +126,136 @@ stages:
       --model ../../models/ner_er/model1 --output_file ../../metrics/ner/disease.json
       --etype DISEASE
     deps:
-    - Dockerfile
     - ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl
     - ../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
     - ../../models/ner_er/model1
+    - Dockerfile
     - eval.py
     params:
     - eval.DISEASE
     metrics:
-    - ../../metrics/ner/disease.json
+    - ../../metrics/ner/disease.json:
+        cache: false
   eval_cell_compartment:
     cmd: python eval.py --annotation_files ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl,../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
       --model ../../models/ner_er/model2 --output_file ../../metrics/ner/cell_compartment.json
       --etype CELL_COMPARTMENT
     deps:
-    - Dockerfile
     - ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl
     - ../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
     - ../../models/ner_er/model2
+    - Dockerfile
     - eval.py
     params:
     - eval.CELL_COMPARTMENT
     metrics:
-    - ../../metrics/ner/cell_compartment.json
+    - ../../metrics/ner/cell_compartment.json:
+        cache: false
   eval_drug:
     cmd: python eval.py --annotation_files ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl,../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
-      --model ../../models/ner_er/model2 --output_file ../../metrics/ner/drug.json --etype
-      DRUG
+      --model ../../models/ner_er/model2 --output_file ../../metrics/ner/drug.json
+      --etype DRUG
     deps:
-    - Dockerfile
     - ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl
     - ../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
     - ../../models/ner_er/model2
+    - Dockerfile
     - eval.py
     params:
     - eval.DRUG
     metrics:
-    - ../../metrics/ner/drug.json
+    - ../../metrics/ner/drug.json:
+        cache: false
   eval_organ:
     cmd: python eval.py --annotation_files ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl,../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
-      --model ../../models/ner_er/model2 --output_file ../../metrics/ner/organ.json --etype
-      ORGAN
+      --model ../../models/ner_er/model2 --output_file ../../metrics/ner/organ.json
+      --etype ORGAN
     deps:
-    - Dockerfile
     - ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl
     - ../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
     - ../../models/ner_er/model2
+    - Dockerfile
     - eval.py
     params:
     - eval.ORGAN
     metrics:
-    - ../../metrics/ner/organ.json
+    - ../../metrics/ner/organ.json:
+        cache: false
   eval_chemical:
     cmd: python eval.py --annotation_files ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl,../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
       --model ../../models/ner_er/model3 --output_file ../../metrics/ner/chemical.json
       --etype CHEMICAL
     deps:
-    - Dockerfile
     - ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl
     - ../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
     - ../../models/ner_er/model3
+    - Dockerfile
     - eval.py
     params:
     - eval.CHEMICAL
     metrics:
-    - ../../metrics/ner/chemical.json
+    - ../../metrics/ner/chemical.json:
+        cache: false
   eval_organism:
     cmd: python eval.py --annotation_files ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl,../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
       --model ../../models/ner_er/model3 --output_file ../../metrics/ner/organism.json
       --etype ORGANISM
     deps:
-    - Dockerfile
     - ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl
     - ../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
     - ../../models/ner_er/model3
+    - Dockerfile
     - eval.py
     params:
     - eval.ORGANISM
     metrics:
-    - ../../metrics/ner/organism.json
+    - ../../metrics/ner/organism.json:
+        cache: false
   eval_cell_type:
     cmd: python eval.py --annotation_files ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl,../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
       --model ../../models/ner_er/model4 --output_file ../../metrics/ner/cell_type.json
       --etype CELL_TYPE
     deps:
-    - Dockerfile
     - ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl
     - ../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
     - ../../models/ner_er/model4
+    - Dockerfile
     - eval.py
     params:
     - eval.CELL_TYPE
     metrics:
-    - ../../metrics/ner/cell_type.json
+    - ../../metrics/ner/cell_type.json:
+        cache: false
   eval_protein:
     cmd: python eval.py --annotation_files ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl,../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
       --model ../../models/ner_er/model4 --output_file ../../metrics/ner/protein.json
       --etype PROTEIN
     deps:
-    - Dockerfile
     - ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl
     - ../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
     - ../../models/ner_er/model4
+    - Dockerfile
     - eval.py
     params:
     - eval.PROTEIN
     metrics:
-    - ../../metrics/ner/protein.json
+    - ../../metrics/ner/protein.json:
+        cache: false
   eval_pathway:
     cmd: python eval.py --annotation_files ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl,../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
       --model ../../models/ner_er/model5 --output_file ../../metrics/ner/pathway.json
       --etype PATHWAY
     deps:
-    - Dockerfile
     - ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl
     - ../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
     - ../../models/ner_er/model5
+    - Dockerfile
     - eval.py
     params:
     - eval.PATHWAY
     metrics:
-    - ../../metrics/ner/pathway.json
+    - ../../metrics/ner/pathway.json:
+        cache: false
   interrater:
     cmd: python interrater.py --annotations1 ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl,../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
       --annotations2 ../../annotations/ner/annotations11_CharlotteLorin_2020-08-28_raw1_10EntityTypes.jsonl,../../annotations/ner/annotations13_CharlotteLorin_2020-09-02_raw7_10EntityTypes.jsonl
