--- a/data_and_models/metrics/ner/disease.json
+++ b/data_and_models/metrics/ner/disease.json
@@ -1,1 +1,1 @@
-{"entity_precision": 0.5614035087719298, "entity_recall": 0.7619047619047619, "entity_f1-score": 0.6464646464646465, "entity_support": 42, "token_precision": 0.5625, "token_recall": 0.8823529411764706, "token_f1-score": 0.6870229007633588, "token_support": 51}
+{"entity_precision": 0.6442048517520216, "entity_recall": 0.7515723270440252, "entity_f1-score": 0.6937590711175616, "entity_support": 318, "token_precision": 0.700162074554295, "token_recall": 0.7985212569316081, "token_f1-score": 0.7461139896373057, "token_support": 541}
