Fix vocab and tokenizer copy

--- a/data_and_models/pipelines/ner/config.cfg
+++ b/data_and_models/pipelines/ner/config.cfg
@@ -1,3 +1,7 @@
+# File generated with: spacy init config config.cfg -l en -p ner -o accuracy.
+# Then adapted to resume the training of the NER component of a spaCy pipeline.
+# The base spaCy pipeline is from scispaCy v0.4.0.
+
 # Blue Brain Search is a text mining toolbox focused on scientific use cases.
 #
 # Copyright (C) 2020  Blue Brain Project, EPFL.
@@ -14,11 +18,6 @@
 #
 # You should have received a copy of the GNU Lesser General Public License
 # along with this program. If not, see <https://www.gnu.org/licenses/>.
-
-# File generated with: spacy init config config.cfg -l en -p ner -o accuracy.
-# Then adapted to resume the training of the NER component of a spaCy pipeline.
-# The base spaCy pipeline is from ScispaCy v0.4.0.
-
 
 [paths]
 train = null
@@ -138,13 +137,14 @@ ents_r = 0.0
 [pretraining]
 
 [initialize]
-vectors = ${paths.base_model}
+vectors = null
 init_tok2vec = null
 vocab_data = null
 lookups = null
-before_init = null
 after_init = null
+components = {}
+tokenizer = {}
 
-[initialize.components]
-
-[initialize.tokenizer]
+[initialize.before_init]
+@callbacks = "copy_vocab_tokenizer"
+source = ${paths.base_model}
