--- a/data_and_models/pipelines/sentence_embedding/dvc.yaml
+++ b/data_and_models/pipelines/sentence_embedding/dvc.yaml
@@ -12,7 +12,8 @@ stages:
     - ../../metrics/sentence_embedding/biobert_nli_sts_cord19_v1.csv
     - ../../metrics/sentence_embedding/biobert_nli_sts_cord19_v1.png
     metrics:
-    - ../../metrics/sentence_embedding/biobert_nli_sts_cord19_v1.json
+    - ../../metrics/sentence_embedding/biobert_nli_sts_cord19_v1.json:
+        cache: false
   eval_biobert_nli_sts:
     cmd: python eval.py --annotation_files=../../annotations/sentence_embedding/sentence_similarity_cord19.csv
       --model=biobert_nli_sts --output_dir=../../metrics/sentence_embedding
@@ -26,7 +27,8 @@ stages:
     - ../../metrics/sentence_embedding/biobert_nli_sts.csv
     - ../../metrics/sentence_embedding/biobert_nli_sts.png
     metrics:
-    - ../../metrics/sentence_embedding/biobert_nli_sts.json
+    - ../../metrics/sentence_embedding/biobert_nli_sts.json:
+        cache: false
   train_tf_idf:
     cmd: python train.py --sentences_file=../../annotations/sentence_embedding/cord19_v47_sentences_pre.txt
       --model=tf_idf --output_dir=../../models/sentence_embedding/tf_idf
@@ -52,7 +54,8 @@ stages:
     - ../../metrics/sentence_embedding/tf_idf.csv
     - ../../metrics/sentence_embedding/tf_idf.png
     metrics:
-    - ../../metrics/sentence_embedding/tf_idf.json
+    - ../../metrics/sentence_embedding/tf_idf.json:
+        cache: false
   train_count:
     cmd: python train.py --sentences_file=../../annotations/sentence_embedding/cord19_v47_sentences_pre.txt
       --model=count --output_dir=../../models/sentence_embedding/count
@@ -78,7 +81,8 @@ stages:
     - ../../metrics/sentence_embedding/count.csv
     - ../../metrics/sentence_embedding/count.png
     metrics:
-    - ../../metrics/sentence_embedding/count.json
+    - ../../metrics/sentence_embedding/count.json:
+        cache: false
   eval_sbert:
     cmd: python eval.py --annotation_files=../../annotations/sentence_embedding/sentence_similarity_cord19.csv
       --model=sbert --output_dir=../../metrics/sentence_embedding
@@ -92,7 +96,8 @@ stages:
     - ../../metrics/sentence_embedding/sbert.csv
     - ../../metrics/sentence_embedding/sbert.png
     metrics:
-    - ../../metrics/sentence_embedding/sbert.json
+    - ../../metrics/sentence_embedding/sbert.json:
+        cache: false
   eval_sbiobert:
     cmd: python eval.py --annotation_files=../../annotations/sentence_embedding/sentence_similarity_cord19.csv
       --model=sbiobert --output_dir=../../metrics/sentence_embedding
@@ -106,4 +111,5 @@ stages:
     - ../../metrics/sentence_embedding/sbiobert.csv
     - ../../metrics/sentence_embedding/sbiobert.png
     metrics:
-    - ../../metrics/sentence_embedding/sbiobert.json
+    - ../../metrics/sentence_embedding/sbiobert.json:
+        cache: false
