--- a/data_and_models/pipelines/ner/params.yaml
+++ b/data_and_models/pipelines/ner/params.yaml
@@ -30,21 +30,21 @@ train:
       n_iter: 10
       dropout: 0.2
 eval:
-  DISEASE:
+  disease:
     etype_name: DISEASE
-  CELL_COMPARTMENT:
+  cell_compartment:
     etype_name: CELLULAR_COMPONENT
-  DRUG:
+  drug:
     etype_name: SIMPLE_CHEMICAL
-  ORGAN:
+  organ:
     etype_name: ORGAN
-  CHEMICAL:
+  chemical:
     etype_name: CHEBI
-  ORGANISM:
+  organism:
     etype_name: TAXON
-  CELL_TYPE:
+  cell_type:
     etype_name: CELL_TYPE
-  PROTEIN:
+  protein:
     etype_name: PROTEIN
-  PATHWAY:
+  pathway:
     etype_name: PATHWAY
